fixed overscrolling issue on smaller width viewports for home page

--- a/app/globals.css
+++ b/app/globals.css
@@ -172,19 +172,12 @@ details[open] summary p {
 }
 
 .countdown:hover {
-  /* box-shadow: 0 8px 32px 0 rgba(255, 255, 255, 0.37); */
-  backdrop-filter: blur(10px);
-  -webkit-backdrop-filter: blur(10px);
-  padding-top: 25px;
-  padding-bottom: 25px;
-  border-radius: 10px;
   transition: all 0.1s ease-in;
   cursor: pointer;
   border: 1px solid theme('colors.rose.600');
 }
 
 .countdown {
-  
   background: black;
   border: 1px solid rgb(38 38 38);
   color: white;
